[package]
name = "linear_punch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
cynic = { version = "3.5.0", features = ["http-reqwest"] }
dotenvy = "0.15.7"
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
simple-error = "0.3.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
cynic-codegen = { version = "3" }

[dev-dependencies]
insta = "1"

